[FEAT] #25 Add property list, detail, and delete APIs